--- a/html/web/demo/basic-usage.html
+++ b/html/web/demo/basic-usage.html
@@ -8,7 +8,7 @@
       <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
       <center>
-          <h1>Hls.js demo - basic usage</h1>
+          <a href="http://localhost/hls/sample10.m3u8" target="blank"><h1>http://localhost/hls/sample10.m3u8</h1></a>
           <video height="600" id="video" controls></video>
       </center>
 
@@ -16,7 +16,7 @@
         if(Hls.isSupported()) {
           var video = document.getElementById('video');
           var hls = new Hls();
-          hls.loadSource('https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8');
+          hls.loadSource('http://localhost/hls/sample10.m3u8');
           hls.attachMedia(video);
           hls.on(Hls.Events.MANIFEST_PARSED,function() {
             video.play();
